Simplify code by using the URI type instead of String for URLs